@startuml Orbis_ClassDiagram

!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #F0F0F0
skinparam classBorderColor #333333

enum UserRole {
    Admin
    Manager
    Operator
}

enum PersonType {
    Individual
    LegalEntity
}

enum ContractStatus {
    Draft
    Active
    Expired
    Cancelled
}

enum ServiceCategory {
    Health
    Property
    Vehicle
    Travel
    Other
}

class User {
    - Id: int
    - Username: string
    - Password: string
    - Role: UserRole
    - FullName: string
    - Email: string
    - CreatedAt: DateTime

    + CreatePerson(): Person
    + CreateContract(): Contract
    + UpdatePerson(): void
    + CancelContract(): void

    - Persons: ICollection<Person>
    - CreatedContracts: ICollection<Contract>
}

class Person {
    - Id: int
    - PersonType: PersonType
    - Name: string
    - INN: string
    - PassportSeries: string?
    - PassportNumber: string?
    - Address: string
    - Phone: string
    - Email: string
    - CreatedAt: DateTime

    - RegisteredByUserId: int

    + UpdateInfo(): void
    + GetActiveContracts(): ICollection<Contract>
    + AddContract(): Contract

    - RegisteredByUser: User
    - Contracts: ICollection<Contract>
}

class InsuranceService {
    - Id: int
    - Name: string
    - Description: string
    - Cost: decimal
    - DurationMonths: int
    - Category: ServiceCategory
    - IsActive: bool
    - CreatedAt: DateTime

    + Activate(): void
    + Deactivate(): void
    + ChangePrice(): void

    - Contracts: ICollection<Contract>
}

class Contract {
    - Id: int
    - ContractNumber: string
    - ContractDate: DateTime
    - StartDate: DateTime
    - EndDate: DateTime
    - Amount: decimal
    - Status: ContractStatus
    - Notes: string
    - CreatedAt: DateTime

    - PersonId: int
    - InsuranceServiceId: int
    - CreatedByUserId: int

    + Conclude(): void
    + Extend(): void
    + Cancel(): void
    + CalculateAmount(): decimal

    - Person: Person
    - InsuranceService: InsuranceService
    - CreatedByUser: User
}

User "1" -- "*" Person : registers
Person "1" -- "*" Contract : has
InsuranceService "1" -- "*" Contract : used in
User "1" -- "*" Contract : creates

User ..> UserRole
Person ..> PersonType
Contract ..> ContractStatus
InsuranceService ..> ServiceCategory

@enduml
